<resources>
    <string name="app_name">Valorant Story</string>
    <string name="language">English</string>
    <string name="id_app" translatable="false">ca-app-pub-5137350238508067~8717736962</string>
    <string name="id_ad_banner" translatable="false">ca-app-pub-5137350238508067/8689816802</string>
    <string name="id_ad_banner_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="id_ad_interstitial" translatable="false">ca-app-pub-5137350238508067/5932270459</string>
    <string name="id_ad_interstitial_test" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="color_deep_pink" translatable="false">#FF1493</string>
    <string name="color_white" translatable="false">#FFFFFF</string>
    <string name="color_gray" translatable="false">#979797</string>
    <string name="cred">creds</string>
    <string name="sec">sec</string>
    <string name="charge">charges</string>
    <string name="point">points</string>
    <string name="main_tab_agents">Agent</string>
    <string name="main_tab_weapons">Arsenal</string>
    <string name="main_tab_maps">Map</string>
    <string name="agent_breach_name">Breach</string>
    <string name="agent_breach_biography">Breach, the bionic Swede, fires powerful, targeted kinetic blasts to aggressively clear a path through enemy ground. The damage and disruption he inflicts ensures no fight is ever fair.</string>
    <string name="agent_breach_comment">"Hit them fast, hit them hard."</string>
    <string name="agent_breach_role">Initiator</string>
    <string name="agent_breach_role_description">Initiators challenge angles by setting up their team to enter contested ground and push defenders away. You can expect to see lots of stuns and information gathering abilities with this class.</string>
    <string name="agent_breach_skill1_name">Aftershock</string>
    <string name="agent_breach_skill1_cost" translatable="false">100</string>
    <string name="agent_breach_skill1_charge" translatable="false">1</string>
    <string name="agent_breach_skill1_description">EQUIP a fusion charge. FIRE the charge to set a slow-acting burst through the wall. The burst does heavy damage to anyone caught in its area.</string>
    <string name="agent_breach_skill2_name">Flashpoint</string>
    <string name="agent_breach_skill2_cost" translatable="false">200</string>
    <string name="agent_breach_skill2_charge" translatable="false">2</string>
    <string name="agent_breach_skill2_description">EQUIP a blinding charge. FIRE the charge to set fast-acting burst through the wall. The charge detonates to blind all players looking at it.</string>
    <string name="agent_breach_skill3_name">Fault Line</string>
    <string name="agent_breach_skill3_cost">35sec</string>
    <string name="agent_breach_skill3_charge" translatable="false">1</string>
    <string name="agent_breach_skill3_description">EQUIP a seismic blast. HOLD FIRE to increase the distance. RELEASE to set off the quake, dazing all players in its zone and in a line up to the zone.</string>
    <string name="agent_breach_skill4_name">Rolling Thunder</string>
    <string name="agent_breach_skill4_cost" translatable="false">7</string>
    <string name="agent_breach_skill4_charge" translatable="false">1</string>
    <string name="agent_breach_skill4_description">EQUIP a seismic charge. FIRE to send a cascading quake through all terrain in a large cone. The quake dazes and knocks up anyone caught in it.</string>
    <string name="agent_brimstone_name">Brimstone</string>
    <string name="agent_brimstone_biography">"Joining from the USA, Brimstone's orbital arsenal ensures his squad always has the advantage. His ability to deliver utility precisely and from a distance make him an unmatched boots-on-the-ground commander. "</string>
    <string name="agent_brimstone_comment">\"Pay attention. Might learn something.\"</string>
    <string name="agent_brimstone_role">Controller</string>
    <string name="agent_brimstone_role_description">Controllers are experts in slicing up dangerous territory to set their team up for success. This class provides lots of utility in the form of slowing down the enemy players via Walls, Smokes that block Vision, and even Slows that can be placed on the ground.</string>
    <string name="agent_brimstone_skill1_name">Stim Beacon</string>
    <string name="agent_brimstone_skill1_cost" translatable="false">100</string>
    <string name="agent_brimstone_skill1_charge" translatable="false">2</string>
    <string name="agent_brimstone_skill1_description">EQUIP a stim beacon. FIRE to toss the stim beacon in front of Brimstone. Upon landing, the stim beacon will create a field that grants players RapidFire.</string>
    <string name="agent_brimstone_skill2_name">Incendiary</string>
    <string name="agent_brimstone_skill2_cost" translatable="false">300</string>
    <string name="agent_brimstone_skill2_charge" translatable="false">1</string>
    <string name="agent_brimstone_skill2_description">EQUIP an incendiary grenade launcher. FIRE to launch a grenade that detonates as it comes to a rest on the floor, creating a lingering fire zone that damages players within the zone.</string>
    <string name="agent_brimstone_skill3_name">Sky Smoke</string>
    <string name="agent_brimstone_skill3_cost" translatable="false">100</string>
    <string name="agent_brimstone_skill3_charge" translatable="false">3</string>
    <string name="agent_brimstone_skill3_description">EQUIP a tactical map. FIRE to set locations where Brimstone’s smoke clouds will land. ALTERNATE FIRE to confirm, launching long-lasting smoke clouds that block vision in the selected area.</string>
    <string name="agent_brimstone_skill4_name">Orbital Strike</string>
    <string name="agent_brimstone_skill4_cost" translatable="false">7</string>
    <string name="agent_brimstone_skill4_charge" translatable="false">1</string>
    <string name="agent_brimstone_skill4_description">EQUIP a seismic charge. FIRE to send a cascading quake through all terrain in a large cone. The quake dazes and knocks up anyone caught in it.</string>
    <string name="agent_cypher_name">Cypher</string>
    <string name="agent_cypher_biography">"The Moroccan information broker, Cypher is a one-man surveillance network who keeps tabs on the enemy's every move. No secret is safe. No maneuver goes unseen. Cypher is always watching. "</string>
    <string name="agent_cypher_comment">\"I know exactly where you are.\"</string>
    <string name="agent_cypher_role">Sentinel</string>
    <string name="agent_cypher_role_description">Sentinels are defensive experts who can lock down areas and watch flanks, both on attacker and defender rounds. This class type tends to be the best defensive agents; these characters will either hang back or lay traps to watch your teams flank when attacking.</string>
    <string name="agent_cypher_skill1_name">Trapwire</string>
    <string name="agent_cypher_skill1_cost" translatable="false">200</string>
    <string name="agent_cypher_skill1_charge" translatable="false">2</string>
    <string name="agent_cypher_skill1_description">EQUIP a trapwire. FIRE to place a destructible and covert tripwire at the targeted location creating a line that spans between the placed location and the wall opposite. Enemy players who cross a tripwire will be tethered, revealed, and dazed after a short period if they do not destroy the device in time. This ability can be picked up to be REDEPLOYED.</string>
    <string name="agent_cypher_skill2_name">Cyber Cage</string>
    <string name="agent_cypher_skill2_cost" translatable="false">100</string>
    <string name="agent_cypher_skill2_charge" translatable="false">2</string>
    <string name="agent_cypher_skill2_description">INSTANTLY toss the cyber cage in front of Cypher. Activate to create a zone that blocks vision and slows enemies who pass through it.</string>
    <string name="agent_cypher_skill3_name">Spycam</string>
    <string name="agent_cypher_skill3_cost">45sec</string>
    <string name="agent_cypher_skill3_charge" translatable="false">1</string>
    <string name="agent_cypher_skill3_description">EQUIP a spycam. FIRE to place the spycam at the targeted location. RE-USE this ability to take control of the camera’s view. While in control of the camera, FIRE to shoot a marking dart. This dart will reveal the location of any player struck by the dart.(if you take back the cam, only 15s)</string>
    <string name="agent_cypher_skill4_name">Neural Theft</string>
    <string name="agent_cypher_skill4_cost" translatable="false">7</string>
    <string name="agent_cypher_skill4_charge" translatable="false">1</string>
    <string name="agent_cypher_skill4_description">INSTANTLY use on a dead enemy player in your crosshairs to reveal the location of all living enemy players.</string>
    <string name="agent_jett_name">Jett</string>
    <string name="agent_jett_biography">Representing her home country of South Korea, Jett\'s agile and evasive fighting style lets her take risks no one else can. She runs circles around every skirmish, cutting enemies before they even know what hit them.</string>
    <string name="agent_jett_comment">\"Keep up.\"</string>
    <string name="agent_jett_role">Duelist</string>
    <string name="agent_jett_role_description">Duelists are self-sufficient fraggers who their team expects, through abilities and skills, to get high frags and seek out engagements first. This class type is the most offensive choice and often ranks highly as an Attacker. These agents will generally be at the forefront when clearing corners and attacking sites.</string>
    <string name="agent_jett_skill1_name">Cloudburst</string>
    <string name="agent_jett_skill1_cost" translatable="false">100</string>
    <string name="agent_jett_skill1_charge" translatable="false">3</string>
    <string name="agent_jett_skill1_description">INSTANTLY throw a projectile that expands into a brief vision-blocking cloud on impact with a surface. HOLD the ability key to curve the smoke in the direction of your crosshair.</string>
    <string name="agent_jett_skill2_name">Updraft</string>
    <string name="agent_jett_skill2_cost" translatable="false">100</string>
    <string name="agent_jett_skill2_charge" translatable="false">2</string>
    <string name="agent_jett_skill2_description">INSTANTLY propel Jett high into the air.</string>
    <string name="agent_jett_skill3_name">Tailwind</string>
    <string name="agent_jett_skill3_cost">kill 2 enemies</string>
    <string name="agent_jett_skill3_charge" translatable="false">1</string>
    <string name="agent_jett_skill3_description">INSTANTLY propel Jett in the direction she is moving. If Jett is standing still, she will propel forward.</string>
    <string name="agent_jett_skill4_name">Blade Storm</string>
    <string name="agent_jett_skill4_cost" translatable="false">6</string>
    <string name="agent_jett_skill4_charge" translatable="false">1</string>
    <string name="agent_jett_skill4_description">EQUIP a set of highly accurate knives that recharge on killing an opponent. FIRE to throw a single knife at your target. ALTERNATE FIRE to throw all remaining daggers at your target.(head: 150, else: 50)</string>
    <string name="agent_omen_name">Omen</string>
    <string name="agent_omen_biography">A phantom of a memory, Omen hunts in the shadows. He renders enemies blind, teleports across the field, then lets paranoia take hold as his foe scrambles to learn where he might strike next.</string>
    <string name="type">type:</string>
    <string name="cost">cost:</string>
    <string name="ammo">ammo:</string>
    <string name="wall_penetration">penetration:</string>
    <string name="arsenal_tacticalknife_name">Tactical Knife</string>
    <string name="arsenal_tacticalknife_type">Meele</string>
    <string name="arsenal_tacticalknife_cost" translatable="false">0</string>
</resources>