<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main_arsenal"
    tools:context=".ArsenalDetailActivity">

    <ImageView
        android:id="@+id/ArsenalDetailImageView"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tacticalknife" />

    <TextView
        android:id="@+id/ArsenalDetailNameTextView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/font_jsdkregularfont"
        android:gravity="center"
        android:text="@string/arsenal_tacticalknife_name"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ArsenalDetailImageView" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ArsenalDetailNameTextView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/font_jsdkregularfont"
                android:gravity="center_vertical|end"
                android:paddingEnd="4dp"
                android:text="@string/type"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ArsenalDetailTypeTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/font_jsarirangfont"
                android:gravity="start|center_vertical"
                android:text="@string/arsenal_tacticalknife_type"
                android:textColor="#FFFFFF"
                app:autoSizeTextType="uniform" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/font_jsdkregularfont"
                android:gravity="center_vertical|end"
                android:paddingEnd="4dp"
                android:text="@string/cost"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ArsenalDetailCostTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/font_jsarirangfont"
                android:gravity="start|center_vertical"
                android:text="@string/arsenal_tacticalknife_cost"
                android:textColor="#FFFFFF"
                app:autoSizeTextType="uniform" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/font_jsdkregularfont"
                android:gravity="center_vertical|end"
                android:paddingEnd="4dp"
                android:text="@string/ammo"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ArsenalDetailAmmoTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/font_jsarirangfont"
                android:gravity="start|center_vertical"
                android:text="0 / 0"
                android:textColor="#FFFFFF"
                app:autoSizeTextType="uniform" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/font_jsdkregularfont"
                android:gravity="center_vertical|end"
                android:paddingEnd="4dp"
                android:text="@string/wall_penetration"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ArsenalDetailWallPenetrationTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/font_jsarirangfont"
                android:gravity="start|center_vertical"
                android:text="none"
                android:textColor="#FFFFFF"
                app:autoSizeTextType="uniform" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>